# codex

./: .dockerignore  .env  .gitignore  README.md  codex.code-workspace  default.sqlite  docker-compose.override.yml  docker-compose.yml  generate_requirements.sh  start_index_service.sh  start_webui.sh
agent_service/: .env.prod  Dockerfile  Dockerfile.Executor  __init__.py  __init__.pyi  agent.py  app.py  constants.py  custom_parser.py  filestore.py  graph.py  pyproject.toml  requirements.txt  startup.py  team.py  tools.py  utility.py  websocketlogger.py  workflows.py
csharp_analysis_service/: CSharpAnalysisService.sln
csharp_analysis_service/AnalysisService/: AnalysisService.csproj  AnalysisService.http  Dockerfile  Program.cs  Startup.cs
csharp_analysis_service/AnalysisService/Controllers/: AnalysisController.cs
csharp_analysis_service/AnalysisService/Models/: BuildIndexRequest.cs  RoslynDeclaration.cs  RoslynMethodInfo.cs  SummaryResponse.cs
csharp_analysis_service/AnalysisService/Properties/: launchSettings.json
csharp_analysis_service/AnalysisService/RoslynSyntax/: InlineVariableRewriter.cs  VariableMerger.cs
csharp_analysis_service/AnalysisService/Workers/: RoslynWorker.cs
index_service/: .env.dev  Dockerfile  __init__.py  __init__.pyi  app.py  config.py  custom_analyzer.py  custom_cache.py  custom_embedding.py  custom_indexer.py  custom_ollama.py  custom_query.py  custom_reader.py  custom_retriever.py  custom_store.py  custom_transform.py  custom_vectordb.py  evaluate.py  index.py  model.py  pyproject.toml  querytest.py  requirements.txt  startup.py  utils.py
shared/: __init__.py  __init__.pyi  app_config.py  concurrent_utils.py  constants.py  logger.py  models.py  service_port_mapping  startup.py  utils.py  websocket_server.py
tests/: test_agent_service.py  test_index_app.py  test_index_app_startup.py  test_index_graph.py  test_shared_concurrent_utils.py
webui/: .env.dev  .env.prod  Dockerfile  __init__.py  __init__.pyi  app.py  llm_proxy.py  nebula_service.py  pyproject.toml  requirements.txt  startup.py
